# SimpleRefactoring

./: .gitignore  CMakeLists.txt  README.md  grokscrap.py  refactor.py  simpleRefactor.cpp
examples/: config.xml  test.cpp  test.cpp.refactored
examples/include/: test.hpp  test.hpp.refactored
